--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "date-fns": "^1.30.1",
+    "firebase": "^5.9.3",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
